Bug 110954 - [14 Regression] Wrong code with -O0
Summary: [14 Regression] Wrong code with -O0
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 14.0
: P3 normal
Target Milestone: 14.0
Assignee: Andrew Pinski
URL:
Keywords: wrong-code
: 111007 (view as bug list)
Depends on:
Blocks: yarpgen
  Show dependency treegraph
 
Reported: 2023-08-09 00:34 UTC by Vsevolod Livinskii
Modified: 2023-08-15 00:11 UTC (History)
5 users (show)

See Also:
Host:
Target:
Build:
Known to work: 13.0
Known to fail: 14.0
Last reconfirmed: 2023-08-09 00:00:00


Attachments
new patch which I am testing (2.41 KB, patch)
2023-08-10 18:41 UTC, Andrew Pinski
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Vsevolod Livinskii 2023-08-09 00:34:01 UTC
Link to the compiler explorer:
https://godbolt.org/z/WYoT4hW9v

Reproducer:
#include <stdio.h>
unsigned long long a;
void b(unsigned long long *c, int g) { *c = g; }
int d, e = -38921963;
long f;
int main() {
  d = (-1807546494482798067UL - f < (6033086967267 > 0)) & e |
      !(-1807546494482798067UL - f < (6033086967267 > 0));
  b(&a, d);
  printf("%llu\n", a);
  if (a != 1)
    __builtin_abort();
}

Error:
>$ g++ -O0 test.cpp && ./a.out 
18446744073670629653
Aborted (core dumped)
>$ /usr/bin/g++-11 -O0 test.cpp && ./a.out 
1

gcc version 14.0.0 20230808 (20659be04c2749f9f47b085f1789eee0d145fb36)
Comment 1 Andrew Pinski 2023-08-09 00:39:48 UTC
I think this is mine.
Comment 2 Andrew Pinski 2023-08-09 00:44:23 UTC
Generic has different type constraints than gimple and that is what is confusing here.
bitwise_inverted_equal_p cannot check comparisons to see if they are inverse of each other unless the type is a boolean type ...
Comment 3 Andrew Pinski 2023-08-09 19:39:46 UTC
Cleaned and simplified up testcase:
```
#define comparison (f < 0)
int main() {
  int f = 0;
  int d = comparison | !comparison;
  if (d != 1)
    __builtin_abort();
}

```
Comment 4 Andrew Pinski 2023-08-10 00:21:08 UTC
Patch posted:
https://gcc.gnu.org/pipermail/gcc-patches/2023-August/626896.html
Comment 5 Andrew Pinski 2023-08-10 18:41:08 UTC
Created attachment 55718 [details]
new patch which I am testing

The only thing is it is sometimes overly conserative with the check of
`!wascmp || element_precision (type) == 1` for vector types
but that is ok those were not handled before either anyways.

We do handle `a & ~a` and `a |^ ~a` for all cases (correctly) like we did previously and before r14-2925-g2bae476b511dc441bf61da8a4 .
Comment 6 GCC Commits 2023-08-11 06:51:50 UTC
The trunk branch has been updated by Andrew Pinski <pinskia@gcc.gnu.org>:

https://gcc.gnu.org/g:f956c232649e4bb7482786cd54e5d5b4085cd00a

commit r14-3140-gf956c232649e4bb7482786cd54e5d5b4085cd00a
Author: Andrew Pinski <apinski@marvell.com>
Date:   Wed Aug 9 13:49:24 2023 -0700

    Fix PR 110954: wrong code with cmp | !cmp
    
    This was an oversight on my part forgetting that
    cmp will might have a different true value than all ones
    but will have a value of 1 in most cases.
    This means if we have `(f < 0) | !(f < 0)` we would
    optimize this to -1 rather than just 1.
    
    This is version 2 of the patch.
    Decided to go down a different route than just checking if
    the precission was 1 inside bitwise_inverted_equal_p.
    So instead bitwise_inverted_equal_p gets passed an argument
    that will be set if there was a comparison that was being compared
    and the user of bitwise_inverted_equal_p decides what needs to be done.
    In most uses of bitwise_inverted_equal_p, the check will be
    `!wascmp || element_precision (type) == 1` .
    But in the case of `a & ~a` and `a ^| ~a` we can handle the case
    of wascmp by using constant_boolean_node isntead.
    
    OK? Bootstrapped and tested on x86_64-linux-gnu with no regressions.
    
            PR tree-optimization/110954
    
    gcc/ChangeLog:
    
            * generic-match-head.cc (bitwise_inverted_equal_p): Add
            wascmp argument and set it accordingly.
            * gimple-match-head.cc (bitwise_inverted_equal_p): Add
            wascmp argument to the macro.
            (gimple_bitwise_inverted_equal_p): Add
            wascmp argument and set it accordingly.
            * match.pd (`a & ~a`, `a ^| ~a`): Update call
            to bitwise_inverted_equal_p and handle wascmp case.
            (`(~x | y) & x`, `(~x | y) & x`, `a?~t:t`): Update
            call to bitwise_inverted_equal_p and check to see
            if was !wascmp or if precision was 1.
    
    gcc/testsuite/ChangeLog:
    
            * gcc.c-torture/execute/pr110954-1.c: New test.
Comment 7 Andrew Pinski 2023-08-13 17:50:07 UTC
*** Bug 111007 has been marked as a duplicate of this bug. ***
Comment 8 Andrew Pinski 2023-08-15 00:11:19 UTC
Fixed.